# helm-oss

./: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.slim  LICENSE  Makefile  PRODUCT_LADDER.md  README.md  RELEASE.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  go.work  go.work.sum  install.sh  receipt_eval_ls20.json
.github/: CODEOWNERS
.github/DISCUSSION_TEMPLATE/: start-here.yml
.github/workflows/: boundary-checks.yml  boundary-verification.yml  (+12 more)
Formula/: helm.rb
benchmarks/: README.md
core/: .gitignore  Dockerfile  Dockerfile.api  go.mod  go.sum  helm.yaml  test_out.txt
deploy/: Caddyfile  DEMO_HOSTED.md  Dockerfile.caddy  README.md  demo-reset.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  CAPABILITY_MANIFESTS.md  CHAOS_TESTING.md  COMPATIBILITY.md  CONFORMANCE.md  CONSOLE_API.md  CREDENTIAL_SECURITY.md  CTO_RADAR.md  DEMO.md  DEPENDENCIES.md  EXECUTION_SECURITY_MODEL.md  FOR_HUMANS.md  GOVERNANCE_SPEC.md  INSERTION_GUIDE.md  INTEGRATE_IN_5_MIN.md  LEXICON.md  OBSERVABILITY.md  OSS_CUTLINE.md  OSS_SCOPE.md  OWASP_MCP_THREAT_MAPPING.md  PACKAGE_TAXONOMY.md  POLICY_BUNDLES.md  POLICY_SIMULATION.md  PORTS.md  PRODUCT_BOUNDARY.md  PUBLISHING.md  QUICKSTART.md  REGIONAL_COMPAT.md  ROADMAP.md  SECURITY_MODEL.md  START_HERE.md  TCB_POLICY.md  TELEMETRY.md  THREAT_MODEL.md  TROUBLESHOOTING.md  VERIFICATION.md  VERIFIER_TRUST_MODEL.md  VERIFY_INSTALL.md  index.md  (+5 more)
examples/: README.md
research/arc_bridge/: Dockerfile  models.py  pyproject.toml  server.py
research/arc_bridge/environment_files/ls20/9607627b/: metadata.json
scripts/: deploy_demo.sh  generate-fixture.mjs  verify-fixture-roots.mts
sdk/python/: README.md  pyproject.toml
sdk/python/crewai/: README.md  helm_crewai.py
sdk/python/google_adk/: README.md  helm_google_adk.py
sdk/python/helm_sdk/: __init__.py  client.py  types_gen.py
sdk/python/langchain/: README.md  helm_langchain.py  test_helm_langchain.py
sdk/python/llamaindex/: README.md  helm_llamaindex.py
sdk/python/microsoft_agents/: README.md  __init__.py  helm_ms_agent.py  test_helm_ms_agent.py
sdk/python/openai_agents/: README.md  __init__.py  helm_openai_agents.py  test_helm_openai_agents.py
sdk/python/pydanticai/: README.md  helm_pydanticai.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  lib.rs  types_gen.rs
tools/: verify-boundary.sh
(+1513 files in other folders)
